--- a/ui/packages/consul-ui/app/styles/components/icon-definition/layout.scss
+++ b/ui/packages/consul-ui/app/styles/components/icon-definition/layout.scss
@@ -13,6 +13,3 @@
   white-space: nowrap;
   margin-left: 4px;
 }
-%icon-definition > dt > * {
-  display: none;
-}
